--- a/index.html
+++ b/index.html
@@ -1,2 +1,5 @@
-sdfasfdafsdfds
-d
+<style>
+		body{
+background-image: linear-gradient(rgba(255,255,255,0.5), rgba(255,255,255,0.5)), url("//i.imgur.com/ivG9qP8.jpg") ;
+}
+</style>
