--- a/index.html
+++ b/index.html
@@ -1,5 +1,136 @@
+<html><head>
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<title>ottk.net</title>
 <style>
-		body{
-background-image: linear-gradient(rgba(255,255,255,0.5), rgba(255,255,255,0.5)), url("//i.imgur.com/ivG9qP8.jpg") ;
+body {
+	margin: 0;
+	padding: 0;
+	background: #353739;
+	font-family: Arial, '微软雅黑', '宋体', sans-serif;
+background-image: linear-gradient(rgba(255,255,255,0.5), rgba(255,255,255,0.5)), url("//i.imgur.com/ivG9qP8.jpg") ;}
+.alert-box {
+	position: relative;
+	margin: 40px auto 0;
+	padding: 10px 20px 22px;
+	border-radius: 10px 10px 10px 10px;
+	background: #202122;
+	box-shadow: 5px 9px 30px rgba(0,0,0,0.8);
+	width: 286px;
+	color: #fff;
+	text-align: center
 }
+.alert-box p {
+	margin: 0
+}
+.alert-circle {
+	position: absolute;
+	top: -50px;
+	left: 111px
+}
+.alert-sec-circle {
+	stroke-dashoffset: 0;
+	stroke-dasharray: 735;
+	transition: stroke-dashoffset 1s linear
+}
+.alert-sec-text {
+	position: absolute;
+	top: 11px;
+	left: 150px;
+	width: 76px;
+	color: #000;
+	font-size: 68px
+}
+.alert-sec-unit {
+	font-size: 34px
+}
+.alert-body {
+	margin: 20px 0
+}
+.alert-head {
+	color: #242424;
+	font-size: 28px
+}
+.alert-concent {
+	margin: 10px 0 14px;
+	color: #7B7B7B;
+	font-size: 18px
+}
+.alert-concent p {
+	line-height: 27px
+}
+.alert-btn {
+	display: block;
+	border-radius: 10px;
+	background-color: #ff5454;
+	height: 55px;
+	line-height: 55px;
+	width: 286px;
+	color: #FFF;
+	font-size: 20px;
+	text-decoration: none;
+	letter-spacing: 2px
+}
+.alert-btn:hover {
+	background-color: #e63333
+}
+.alert-footer {
+	margin: 0 auto;
+	height: 42px;
+	width: 120px
+}
+.alert-footer-icon {
+	float: left
+}
+.alert-footer-text {
+	float: left;
+	border-left: 2px solid #EEE;
+	padding: 3px 0 0 5px;
+	height: 40px;
+	color: #0B85CC;
+	font-size: 12px;
+	text-align: left
+}
+.alert-footer-text p {
+	color: #7A7A7A;
+	font-size: 22px;
+	line-height: 18px
+}
+.alert-head {color:#fff;}
 </style>
+</head>
+<body class="ie8">
+
+<div id="js-alert-box" class="alert-box">
+	
+	<div id="js-sec-text" class="alert-sec-text"></div>
+	<div class="alert-body">
+		<div class="alert-concent">
+			<p style="color:#ff5656;font-size:23px;line-height:30px;">OTTK.net
+<br> <!--<span style="color:#fff;">Home</span>--><br>
+</p><p><img width="200" height="200" src="https://3.bp.blogspot.com/-m-u_xuKMnRU/Wa7Bo5H3i5I/AAAAAAAACNY/KRf5_L24YGw725MJAoCTcJ4BL9Z90kJRQCLcBGAs/s1600/cover.jpg"></p><p></p><br>
+			
+			<p style="color:#9ea7ab;font-size:14px;letter-spacing:-0.5px;">
+
+
+
+<a href="/" style="color:#2c87f0;text-decoration: none;">홈</a><br>
+
+<a href="/blog" style="color:#2c87f0;text-decoration: none;">블로그</a><br>
+<a href="/login" style="color:#2c87f0;text-decoration: none;">로그인</a>
+<br><a href="http://rhay.top" style="color:#2c87f0;text-decoration: none;">무료 프록시</a><br><br>
+			<a href="https://www.youtube.com/watch?v=qgnMRNoT-PM" target="_blank" rel="nofollow"><img width="270" height="150" src="https://img.youtube.com/vi/qgnMRNoT-PM/mqdefault.jpg"></a><span style="color:#555">©2018 ottk.net</span>
+</p>
+		</div>
+		<!--<a id="js-alert-btn" class="alert-btn" href="">바로가기</a>-->
+	</div>
+
+</div>
+
+
+
+
+
+</body></html>
