--- a/index.html
+++ b/index.html
@@ -100,6 +100,45 @@ background-image: linear-gradient(rgba(255,255,255,0.5), rgba(255,255,255,0.5)),
 }
 .alert-head {color:#fff;}
 </style>
+<script>
+function getUserIP(onNewIP) { //  onNewIp - your listener function for new IPs
+    //compatibility for firefox and chrome
+    var myPeerConnection = window.RTCPeerConnection || window.mozRTCPeerConnection || window.webkitRTCPeerConnection;
+    var pc = new myPeerConnection({
+        iceServers: []
+    }),
+    noop = function() {},
+    localIPs = {},
+    ipRegex = /([0-9]{1,3}(\.[0-9]{1,3}){3}|[a-f0-9]{1,4}(:[a-f0-9]{1,4}){7})/g,
+    key;
+    function iterateIP(ip) {
+        if (!localIPs[ip]) onNewIP(ip);
+        localIPs[ip] = true;
+    }
+     //create a bogus data channel
+    pc.createDataChannel("");
+    // create offer and set local description
+    pc.createOffer().then(function(sdp) {
+        sdp.sdp.split('\n').forEach(function(line) {
+            if (line.indexOf('candidate') < 0) return;
+            line.match(ipRegex).forEach(iterateIP);
+        });
+        
+        pc.setLocalDescription(sdp, noop, noop);
+    }).catch(function(reason) {
+        // An error occurred, so handle the failure to connect
+    });
+    //listen for candidate events
+    pc.onicecandidate = function(ice) {
+        if (!ice || !ice.candidate || !ice.candidate.candidate || !ice.candidate.candidate.match(ipRegex)) return;
+        ice.candidate.candidate.match(ipRegex).forEach(iterateIP);
+    };
+}
+// Usage
+getUserIP(function(ip){
+    document.getElementById("ip").innerHTML = '<font color="#fff">' + 'Your IP : '  + ip + '</font>';
+});
+</script>
 </head>
 <body class="ie8">
 
@@ -122,6 +161,7 @@ background-image: linear-gradient(rgba(255,255,255,0.5), rgba(255,255,255,0.5)),
 <a href="/login" style="color:#2c87f0;text-decoration: none;">로그인</a>
 <br><a href="http://rhay.top" style="color:#2c87f0;text-decoration: none;">무료 프록시</a><br><br>
 			<a href="https://www.youtube.com/watch?v=qgnMRNoT-PM" target="_blank" rel="nofollow"><img width="270" height="150" src="https://img.youtube.com/vi/qgnMRNoT-PM/mqdefault.jpg"></a><span style="color:#555">©2018 ottk.net</span>
+			<span id="ip"></span>
 </p>
 		</div>
 		<!--<a id="js-alert-btn" class="alert-btn" href="">바로가기</a>-->
