--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ getUserIP(function(ip){
 <a href="/blog" style="color:#2c87f0;text-decoration: none;">블로그</a><br>
 <a href="/login" style="color:#2c87f0;text-decoration: none;">로그인</a>
 <br><a href="http://rhay.top" style="color:#2c87f0;text-decoration: none;">무료 프록시</a><br><br>
-			<a href="https://www.youtube.com/watch?v=qgnMRNoT-PM" target="_blank" rel="nofollow"><img width="270" height="150" src="https://img.youtube.com/vi/qgnMRNoT-PM/mqdefault.jpg"></a><br><span style="color:#555">©2018 ottk.net</span><br>
+			<a href="https://www.youtube.com/watch?v=qgnMRNoT-PM" target="_blank" rel="nofollow"><img width="270" height="150" src="https://img.youtube.com/vi/qgnMRNoT-PM/mqdefault.jpg"></a><br><br><span style="color:#555">©2018 ottk.net</span><br>
 			<span id="ip"></span>
 </p>
 		</div>
