--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ getUserIP(function(ip){
 <a href="/" style="color:#2c87f0;text-decoration: none;">홈</a><br>
 <a href="/blog" style="color:#2c87f0;text-decoration: none;">블로그</a>
 
-<br><a href="http://rhay.top" style="color:#2c87f0;text-decoration: none;">무료 프록시</a><br>
+<br><a href="http://rhay.top" target="_blank" style="color:#2c87f0;text-decoration: none;">무료 프록시</a><br>
 
 <!--<a href="https://www.youtube.com/watch?v=qgnMRNoT-PM" target="_blank" rel="nofollow"><img width="270" height="150" src="https://img.youtube.com/vi/qgnMRNoT-PM/mqdefault.jpg"></a>--><span style="color:#555">©2018 ottk.net</span><br>
 <span id="ip"><font color="#fff">Your IP : 221.142.152.141</font></span>
