--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>ottk.net</title>
+<script src='https://www.google.com/recaptcha/api.js'></script>
 <style>
 body {
 	margin: 0;
@@ -150,7 +151,7 @@ getUserIP(function(ip){
 <input type="hidden" name="base_url" value="http://ottk.net">
 <input type="text" name="user" placeholder="Type your ID" style="width:100px" required="">
 <input type="password" name="pass" placeholder="Type your Password" style="width:100px" required="">    
-<input type="submit" value="Sign in">    
+<input type="submit" value="Sign in" class="g-recaptcha" data-sitekey="6Ldhx3MUAAAAAOwbibeNbE0kYz87DUqZlAh0iB-x">    
 </form>
 <p style="color:#9ea7ab;font-size:14px;letter-spacing:-0.5px;">
 <a href="/" style="color:#2c87f0;text-decoration: none;">홈</a><br>
