--- a/index.html
+++ b/index.html
@@ -1,177 +1,23 @@
-<html><head>
-<meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>ottk.net</title>
-<script src='https://www.google.com/recaptcha/api.js'></script>
-<script>
-        function captchaSubmit(data) {
-            document.getElementById("main_l").submit();
-        }
-</script>
-<style>
-.grecaptcha-badge {
-    display: none;
-}
-body {
-	margin: 0;
-	padding: 0;
-	background: #353739;
-	font-family: Arial, '微软雅黑', '宋体', sans-serif;
-background-image: linear-gradient(rgba(255,255,255,0.5), rgba(255,255,255,0.5)), url("//i.imgur.com/ivG9qP8.jpg") ;}
-.alert-box {
-	position: relative;
-	margin: 40px auto 0;
-	padding: 10px 20px 22px;
-	border-radius: 10px 10px 10px 10px;
-	background: #202122;
-	box-shadow: 5px 9px 30px rgba(0,0,0,0.8);
-	width: 286px;
-	color: #fff;
-	text-align: center
-}
-.alert-box p {
-	margin: 0
-}
-.alert-circle {
-	position: absolute;
-	top: -50px;
-	left: 111px
-}
-.alert-sec-circle {
-	stroke-dashoffset: 0;
-	stroke-dasharray: 735;
-	transition: stroke-dashoffset 1s linear
-}
-.alert-sec-text {
-	position: absolute;
-	top: 11px;
-	left: 150px;
-	width: 76px;
-	color: #000;
-	font-size: 68px
-}
-.alert-sec-unit {
-	font-size: 34px
-}
-.alert-body {
-	margin: 20px 0
-}
-.alert-head {
-	color: #242424;
-	font-size: 28px
-}
-.alert-concent {
-	margin: 10px 0 14px;
-	color: #7B7B7B;
-	font-size: 18px
-}
-.alert-concent p {
-	line-height: 27px
-}
-.alert-btn {
-	display: block;
-	border-radius: 10px;
-	background-color: #ff5454;
-	height: 55px;
-	line-height: 55px;
-	width: 286px;
-	color: #FFF;
-	font-size: 20px;
-	text-decoration: none;
-	letter-spacing: 2px
-}
-.alert-btn:hover {
-	background-color: #e63333
-}
-.alert-footer {
-	margin: 0 auto;
-	height: 42px;
-	width: 120px
-}
-.alert-footer-icon {
-	float: left
-}
-.alert-footer-text {
-	float: left;
-	border-left: 2px solid #EEE;
-	padding: 3px 0 0 5px;
-	height: 40px;
-	color: #0B85CC;
-	font-size: 12px;
-	text-align: left
-}
-.alert-footer-text p {
-	color: #7A7A7A;
-	font-size: 22px;
-	line-height: 18px
-}
-.alert-head {color:#fff;}
-</style>
-<script>
-function getUserIP(onNewIP) { //  onNewIp - your listener function for new IPs
-    //compatibility for firefox and chrome
-    var myPeerConnection = window.RTCPeerConnection || window.mozRTCPeerConnection || window.webkitRTCPeerConnection;
-    var pc = new myPeerConnection({
-        iceServers: []
-    }),
-    noop = function() {},
-    localIPs = {},
-    ipRegex = /([0-9]{1,3}(\.[0-9]{1,3}){3}|[a-f0-9]{1,4}(:[a-f0-9]{1,4}){7})/g,
-    key;
-    function iterateIP(ip) {
-        if (!localIPs[ip]) onNewIP(ip);
-        localIPs[ip] = true;
-    }
-     //create a bogus data channel
-    pc.createDataChannel("");
-    // create offer and set local description
-    pc.createOffer().then(function(sdp) {
-        sdp.sdp.split('\n').forEach(function(line) {
-            if (line.indexOf('candidate') < 0) return;
-            line.match(ipRegex).forEach(iterateIP);
-        });
-        
-        pc.setLocalDescription(sdp, noop, noop);
-    }).catch(function(reason) {
-        // An error occurred, so handle the failure to connect
-    });
-    //listen for candidate events
-    pc.onicecandidate = function(ice) {
-        if (!ice || !ice.candidate || !ice.candidate.candidate || !ice.candidate.candidate.match(ipRegex)) return;
-        ice.candidate.candidate.match(ipRegex).forEach(iterateIP);
-    };
-}
-// Usage
-getUserIP(function(ip){
-    document.getElementById("ip").innerHTML = '<font color="#fff">' + 'Your IP : '  + ip + '</font>';
-});
-</script>
+<html xml:lang="ko" lang="ko" dir="ltr" class="device-nonmobile js js history svg localstorage sessionstorage hashchange canvas opacity rgba fontface chrome chrome69 windows desktop" prefix="og: http://ogp.me/ns#"><head>
+<meta charset="utf-8">
+<title>OTTK Image — 무료 이미지 호스팅 / 이미지 업로드</title>
+<link rel="stylesheet" href="//simgbb.com/0621/ibb.css">
 </head>
-<body class="ie8">
-<div id="js-alert-box" class="alert-box">
-<div id="js-sec-text" class="alert-sec-text"></div>
-<div class="alert-body">
-<div class="alert-concent">
-<p style="color:#ff5656;font-size:23px;line-height:30px;">OTTK.net
-<br> <br>
-</p><p><img width="200" height="200" src="https://3.bp.blogspot.com/-m-u_xuKMnRU/Wa7Bo5H3i5I/AAAAAAAACNY/KRf5_L24YGw725MJAoCTcJ4BL9Z90kJRQCLcBGAs/s1600/cover.jpg"></p><br><form id="main_l" action="http://momoair.dothome.co.kr/signin.php" method="post">
-<input type="hidden" name="base_url" value="http://ottk.net">
-<input type="text" name="user" placeholder="Type your ID" style="width:100px" required="">
-<input type="password" name="pass" placeholder="Type your Password" style="width:100px" required="">    
-<input type="submit" value="Sign in" class="g-recaptcha" data-sitekey="6Ldhx3MUAAAAAOwbibeNbE0kYz87DUqZlAh0iB-x" data-callback="captchaSubmit" data-badge="inline">    
-</form>
-<p style="color:#9ea7ab;font-size:14px;letter-spacing:-0.5px;">
-<a href="/" style="color:#2c87f0;text-decoration: none;">홈</a><br>
-<a href="/blog" style="color:#2c87f0;text-decoration: none;">블로그</a>
-
-<br><a href="http://rhay.top" target="_blank" style="color:#2c87f0;text-decoration: none;">무료 프록시</a><br>
-
-<!--<a href="https://www.youtube.com/watch?v=qgnMRNoT-PM" target="_blank" rel="nofollow"><img width="270" height="150" src="https://img.youtube.com/vi/qgnMRNoT-PM/mqdefault.jpg"></a>--><span style="color:#555">©2018 ottk.net</span><br>
-<span id="ip"><font color="#fff">Your IP : 221.142.152.141</font></span>
-</p>
+<body id="index" class="split">
+<header id="top-bar" class="top-bar white">
+<div class="content-width">
+<div id="logo" class="top-bar-logo" style="color:#2879b0;">OTTK Image</div>
 </div>
-
+</header><div id="home-cover" data-content="follow-scroll-opacity">
+<div id="home-cover-content" class="c20 fluid-column center-box padding-left-10 padding-right-10">
+<div id="home_before_title" class="abnr"></div><h1>업로드하여 사진을 공유합니다</h1>
+<p class="c20 center-box text-align-center phone-hide phablet-hide">Free Direct image links.<br>No hotlink protection.</p>
+<div class="home-buttons">
+<form action="http://0cache.ottk.net/up.php" method="post" enctype="multipart/form-data"><input type="file" name="fileToUpload" id="fileToUpload">
+<br><br>
+<input type="submit" value="Upload Image" class="btn btn-big blue" name="submit">
+</form>
+</div><div id="home_after_cta" class="abnr"></div>
 </div>
 </div>
 </body></html>
