--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <html xml:lang="ko" lang="ko" dir="ltr" class="device-nonmobile js js history svg localstorage sessionstorage hashchange canvas opacity rgba fontface chrome chrome69 windows desktop" prefix="og: http://ogp.me/ns#"><head>
 <meta charset="utf-8">
-<title>OTTK Image — 무료 이미지 호스팅 / 이미지 업로드</title>
+<title>Imgur.TOP — 무료 이미지 호스팅 / 이미지 업로드</title>
 <link rel="stylesheet" href="//simgbb.com/0621/ibb.css">
 </head>
 <body id="index" class="split">
 <header id="top-bar" class="top-bar white">
 <div class="content-width">
-<div id="logo" class="top-bar-logo" style="color:#2879b0;">OTTK Image</div>
+<div id="logo" class="top-bar-logo" style="color:#2879b0;">Imgur TOP</div>
 </div>
 </header><div id="home-cover" data-content="follow-scroll-opacity">
 <div id="home-cover-content" class="c20 fluid-column center-box padding-left-10 padding-right-10">
 <div id="home_before_title" class="abnr"></div><h1>업로드하여 사진을 공유합니다</h1>
 <p class="c20 center-box text-align-center phone-hide phablet-hide">Free Direct image links.<br>No hotlink protection.</p>
 <div class="home-buttons">
-<form action="http://0cache.ottk.net/up.php" method="post" enctype="multipart/form-data"><input type="file" name="fileToUpload" id="fileToUpload">
+<form action="http://i.imgur.top/up.php" method="post" enctype="multipart/form-data"><input type="file" name="fileToUpload" id="fileToUpload">
 <br><br>
 <input type="submit" value="Upload Image" class="btn btn-big blue" name="submit">
 </form>
