--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <div class="home-buttons">
 <form action="http://i.imgur.top/up.php" method="post" enctype="multipart/form-data"><input type="file" name="fileToUpload" id="fileToUpload">
 <br><br>
+<input type="text" placeholder="User folder name" name="id">
 <input type="submit" value="Upload Image" class="btn btn-big blue" name="submit">
 </form>
 </div><div id="home_after_cta" class="abnr"></div>
