--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <input type="text" placeholder="User folder name" name="id">
 <input type="submit" value="Upload Image" class="btn btn-big blue" name="submit">
 </form>
-</div><div id="home_after_cta" class="abnr"></div>
+</div><div id="home_after_cta" class="abnr"><img src="https://www.jsdelivr.com/img/sponsors/cloudflare.png"><img src="https://www.jsdelivr.com/img/sponsors/fastly.png"></div>
 </div>
 </div>
 </body></html>
