--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <div id="home_before_title" class="abnr"></div><h1>업로드하여 사진을 공유합니다</h1>
 <p class="c20 center-box text-align-center phone-hide phablet-hide">Free Direct image links.<br>No hotlink protection.</p>
 <div class="home-buttons">
-<form action="http://i.imgur.top/up.php" method="post" enctype="multipart/form-data"><input type="file" name="fileToUpload" id="fileToUpload">
+<form action="http://i.imgur.top/up.php" method="post"><input type="file" name="fileToUpload" id="fileToUpload">
 <br><br>
-<input type="text" placeholder="User folder name" name="id">
+<input type="text" placeholder="User folder name" name="id" style="width:50px;">
 <input type="submit" value="Upload Image" class="btn btn-big blue" name="submit">
 </form>
 </div><div id="home_after_cta" class="abnr"><img src="https://www.jsdelivr.com/img/sponsors/cloudflare.png"><img src="https://www.jsdelivr.com/img/sponsors/fastly.png"></div>
