--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="home_before_title" class="abnr"></div><h1>업로드하여 사진을 공유합니다</h1>
 <p class="c20 center-box text-align-center phone-hide phablet-hide">Free Direct image links.<br>No hotlink protection.</p>
 <div class="home-buttons">
-<form action="http://i.imgur.top/up.php" method="post"><input type="file" name="fileToUpload" id="fileToUpload">
+<form action="http://i.imgur.top/up.php" enctype="multipart/form-data" method="post"><input type="file" name="fileToUpload" id="fileToUpload">
 <br><br>
 <input type="text" placeholder="User folder name" name="id" style="width:100px;">
 <input type="submit" value="Upload Image" class="btn btn-big blue" name="submit">
