--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html xml:lang="ko" lang="ko" dir="ltr" class="device-nonmobile js js history svg localstorage sessionstorage hashchange canvas opacity rgba fontface chrome chrome69 windows desktop" prefix="og: http://ogp.me/ns#"><head>
 <meta charset="utf-8">
+<link rel="shortcut icon" type="image/x-icon" href="https://png.icons8.com/dusk/288/picture.png />
 <title>Imgur.TOP — 무료 이미지 호스팅 / 이미지 업로드</title>
 <link rel="stylesheet" href="//simgbb.com/0621/ibb.css">
 </head>
