--- a/index.html
+++ b/index.html
@@ -1,25 +1,10 @@
-<html xml:lang="ko" lang="ko" dir="ltr" class="device-nonmobile js js history svg localstorage sessionstorage hashchange canvas opacity rgba fontface chrome chrome69 windows desktop" prefix="og: http://ogp.me/ns#"><head>
-<meta charset="utf-8">
-<link rel="shortcut icon" type="image/x-icon" href="https://png.icons8.com/dusk/288/picture.png" />
-<title>Imgur.TOP — 무료 이미지 호스팅 / 이미지 업로드</title>
-<link rel="stylesheet" href="//simgbb.com/0621/ibb.css">
-</head>
-<body id="index" class="split">
-<header id="top-bar" class="top-bar white">
-<div class="content-width">
-<div id="logo" class="top-bar-logo" style="color:#2879b0;">Imgur TOP</div>
-</div>
-</header><div id="home-cover" data-content="follow-scroll-opacity">
-<div id="home-cover-content" class="c20 fluid-column center-box padding-left-10 padding-right-10">
-<div id="home_before_title" class="abnr"></div><h1>업로드하여 사진을 공유합니다</h1>
-<p class="c20 center-box text-align-center phone-hide phablet-hide">Free Direct image links.<br>No hotlink protection.</p>
-<div class="home-buttons">
-<form action="http://i.imgur.top/up.php" enctype="multipart/form-data" method="post"><input type="file" name="fileToUpload" id="fileToUpload">
-<br><br>
-<input type="text" placeholder="User folder name" name="id" style="width:150px;">
-<input type="submit" value="Upload Image" class="btn btn-big blue" name="submit">
-</form>
-</div><div id="home_after_cta" class="abnr"><img src="https://www.jsdelivr.com/img/sponsors/cloudflare.png"><img src="https://www.jsdelivr.com/img/sponsors/fastly.png"></div>
-</div>
-</div>
-</body></html>
+<html><head><title>totoland club</title>
+<meta name="description" content="totoland club">
+<meta name="keywords" content="totoland, totoland3.cc, totoland.club, totoland.cc">
+<link rel="canonical" href="http://totoland.club">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"></head>
+<body>
+<frameset rows="100%" border="0" framespacing="0" frameborder="0"><frame name="main" src="http://no.frameplluss.uy.to/" marginwidth="0" marginheight="0" scrolling="auto" noresize="noresize"></frameset>
+<noframes></noframes>
+</body>
+</html>
