--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html><head><title>totoland club</title>
+<html><head>
+<title>totoland club</title>
 <meta name="description" content="totoland club">
 <meta name="keywords" content="totoland, totoland3.cc, totoland.club, totoland.cc">
 <link rel="canonical" href="http://totoland.club">
