--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"></head>
 <body>
 <frameset rows="100%" border="0" framespacing="0" frameborder="0"><frame name="main" src="http://no.frameplluss.uy.to/" marginwidth="0" marginheight="0" scrolling="auto" noresize="noresize"></frameset>
-<noframes></noframes>
+<noframes>err</noframes>
 </body>
 </html>
