--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <meta name="description" content="totoland club">
 <meta name="keywords" content="totoland, totoland3.cc, totoland.club, totoland.cc">
 <link rel="canonical" href="http://totoland.club">
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"></head>
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<style>
+body {
+margin: 0;
+}
+</style>
+</head>
 <body>
-<frameset rows="100%" border="0" framespacing="0" frameborder="0"><frame name="main" src="http://no.frameplluss.uy.to/" marginwidth="0" marginheight="0" scrolling="auto" noresize="noresize"></frameset>
-<noframes></noframes>
+<iframe name="main" src="http://no.frameplluss.uy.to/"></iframe>
 </body>
 </html>
