--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@ margin: 0;
 </style>
 </head>
 <body>
-<iframe style="width: 100%; height: 100% border: 0px;" frameborder="0" scrolling="no" name="main" src="http://no.frameplluss.uy.to/"></iframe>
+<iframe style="width: 100%; height: 100%; border: 0px;" frameborder="0" scrolling="no" name="main" src="http://no.frameplluss.uy.to/"></iframe>
 </body>
 </html>
