--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta name="description" content="totoland club">
 <meta name="keywords" content="totoland, totoland3.cc, totoland.club, totoland.cc">
 <link rel="canonical" href="http://totoland.club">
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 <style>
 body {
 margin: 0;
